# kisscpp

./: .Doxyfile.swp  .gitignore  Doxyfile  Makefile.am  README.md  _r_e_a_d_m_e_8md.html  annotated.html  boost__ptree_8cpp.html  boost__ptree_8cpp__incl.map  boost__ptree_8cpp__incl.md5  boost__ptree_8hpp.html  boost__ptree_8hpp__dep__incl.map  boost__ptree_8hpp__dep__incl.md5  boost__ptree_8hpp__incl.map  boost__ptree_8hpp__incl.md5  boost__ptree_8hpp_source.html  classes.html  classkisscpp_1_1_base64_bi_coder-members.html  classkisscpp_1_1_base64_bi_coder.html  classkisscpp_1_1_config-members.html  classkisscpp_1_1_config.html  classkisscpp_1_1_config_a235cf3d03c1211faa29efa63556921fc_icgraph.map  classkisscpp_1_1_config_a235cf3d03c1211faa29efa63556921fc_icgraph.md5  classkisscpp_1_1_config_a5f970e234e909ccb7b18bf4e7705e336_icgraph.map  classkisscpp_1_1_config_a5f970e234e909ccb7b18bf4e7705e336_icgraph.md5  classkisscpp_1_1_config_a9a68e47e345ee1fa208397f1c19859f2_icgraph.map  classkisscpp_1_1_config_a9a68e47e345ee1fa208397f1c19859f2_icgraph.md5  classkisscpp_1_1_config_ae237509831f23cd9cbfc67dcd6ed8c9d_icgraph.map  classkisscpp_1_1_config_ae237509831f23cd9cbfc67dcd6ed8c9d_icgraph.md5  classkisscpp_1_1_connection-members.html  classkisscpp_1_1_connection.html  classkisscpp_1_1_connection__coll__graph.map  classkisscpp_1_1_connection__inherit__graph.md5  classkisscpp_1_1_connection_aaad88f72fad4844f03e5dd55320caeae_cgraph.map  classkisscpp_1_1_connection_aaad88f72fad4844f03e5dd55320caeae_cgraph.md5  classkisscpp_1_1_error_cleaner-members.html  classkisscpp_1_1_error_cleaner.html  classkisscpp_1_1_error_cleaner__inherit__graph.map  classkisscpp_1_1_error_cleaner__inherit__graph.md5  classkisscpp_1_1_error_cleaner_a0a55baa8cd22124b7a0900fd55e24a96_cgraph.map  (+575 more)
doc/dia/: basic_internals_1.dia  ipc_fig_1.dia  message_based_system_1.dia  message_based_system_2.dia
doc/md/: configuration.md  example_echo.md  inter_process_communication.md  kiss-base.md  kisscpp_main.md  logging.md  mandate.md  motivation.md  standard_handlers.md  the_basic_problem.md  todo.md  white_listed_communications.md
examples/kc_echo/: Makefile.am  configure.ac
examples/kc_echo/kcppcfg/: kc_echo.0.kcppcfg
examples/kc_echo/scripts/: interfaces.sh  loglevel.sh  mtest.sh
examples/kc_echo/src/: handler_echo.cpp  handler_echo.hpp  kc_echo.cpp  kc_echo.hpp  main.cpp
examples/kcsrt/: Makefile.am  configure.ac
examples/kcsrt/kcppcfg/: kcsrt.1.kcppcfg  kcsrt.2.kcppcfg  kcsrt.3.kcppcfg  kcsrt.common.kcppcfg
examples/kcsrt/scripts/: geterr.sh  getstat.sh  mtest.sh  mtest2.sh  test.sh
examples/kcsrt/src/: appid.hpp  handler_echo.cpp  handler_echo.hpp  kcsrt.cpp  kcsrt.hpp  main.cpp
kisscpp/: boost_ptree.cpp  boost_ptree.hpp  client.cpp  client.hpp  configuration.cpp  configuration.hpp  connection.cpp  connection.hpp  errorstate.cpp  errorstate.hpp  io_service_pool.cpp  io_service_pool.hpp  logstream.cpp  logstream.hpp  persisted_queue.hpp  persisted_queue.tpp  ptree_queue.hpp  request_handler.hpp  request_router.hpp  request_status.hpp  server.cpp  server.hpp  standard_handlers.cpp  standard_handlers.hpp  statable_queue.hpp  statskeeper.cpp  statskeeper.hpp  threadsafe_persisted_delayed_queue.hpp  threadsafe_persisted_priority_queue.hpp  threadsafe_persisted_queue.hpp  threadsafe_queue.hpp
latex/: _r_e_a_d_m_e_8md.tex  a00004.tex  a00006.tex  a00008.tex  a00010.tex  a00014.tex  a00018.tex  a00019.tex  a00020.tex  a00020_a4cc9b8f3247cb73910d20549014ba859_cgraph.md5  a00021.tex  a00021_a235cf3d03c1211faa29efa63556921fc_icgraph.md5  a00021_a5f970e234e909ccb7b18bf4e7705e336_icgraph.md5  a00021_a9a68e47e345ee1fa208397f1c19859f2_icgraph.md5  a00021_ae237509831f23cd9cbfc67dcd6ed8c9d_icgraph.md5  a00022.tex  a00022_aaad88f72fad4844f03e5dd55320caeae_cgraph.md5  a00023.tex  a00023_a7afc458c0a447f93f138f006acb57117_cgraph.md5  a00024.tex  a00025.tex  a00025_a20309374dc63ffee8aebeb986340dfba_icgraph.md5  a00025_af51ba7384104a15f7809f62da9c5447d_icgraph.md5  a00026.tex  a00027.tex  a00027_a5085be2e4dcfa1e98bf517c8d0b5443f_cgraph.md5  a00028.tex  a00029.tex  a00029_ae5fd122dbb76f19740c3417df884d812_icgraph.md5  a00030.tex  a00030_a971d59364d21bbaa283ea520caefa604_cgraph.md5  a00031.tex  a00031_a2814d0297db8339779e995c898861e0e_icgraph.md5  a00031_a318a573183c8b552131a4225df381d9f_cgraph.md5  a00031_a318a573183c8b552131a4225df381d9f_icgraph.md5  a00031_a69ca636671642a5340a270e4f22acfaa_cgraph.md5  a00031_a7cb243c196903798707fc08b1cbb32c9_icgraph.md5  a00031_a857e9c930544fe22317b9be6a7d0d9ce_icgraph.md5  a00031_a8ed923f031fb6fd9c981d8c694c16a92_cgraph.md5  a00031_a8ed923f031fb6fd9c981d8c694c16a92_icgraph.md5  (+495 more)
pkgdat/: control  kisscpp.install
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.js  all_63.js  all_64.js  all_65.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_7e.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  (+94 more)
tests/: Makefile.am  configure.ac  test_persisted_queue.cpp
tests/src/: test_persisted_queue.cpp
