AUTOMAKE_OPTIONS     = subdir-objects
ACLOCAL_AMFLAGS      = -I ./m4
AM_CPPFLAGS          = -DBOOST_SPIRIT_THREADSAFE $(DEPS_CFLAGS) $(BOOST_CPPFLAGS) $(KISSCPP_CPPFLAGS)
AM_LDFLAGS           = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_THREAD_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_REGEX_LDFLAGS) $(BOOST_DATE_TIME_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS)
testkisscpp_LDADD    = $(DEPS_LIBS) $(KISSCPP_LIB) $(BOOST_SYSTEM_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_REGEX_LIBS) $(BOOST_DATE_TIME_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) -lrt
bin_PROGRAMS         = testkisscpp
testkisscpp_SOURCES  = src/test_persisted_queue.cpp
dist_noinst_SCRIPTS = autogen.sh
